--- a/style2.css
+++ b/style2.css
@@ -9,6 +9,7 @@ body{
 }
 .logo{
     width: 50%;
+    padding-top:32px;
 }
 .login{
     width: 50%;
@@ -18,5 +19,8 @@ body{
     font-size: 35px;
     font-weight: bold;
     text-decoration: none;
+     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin-left: 170px;
+
 
 }
