--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,7 @@
 }
 body{
     margin: 0;
+    font-family:Helvetica Neue,Helvetica,Arial,sans-serif; ;
 }
 .logo{
     width: 50%;
@@ -23,6 +24,7 @@ body{
     text-decoration: none;
      font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
     margin-left: 170px;
-
-
+}
+.login-label{
+    
 }
